--- a/ppms_project/profilingApp/templates/activities/BHW Immunization Status.html
+++ b/ppms_project/profilingApp/templates/activities/BHW Immunization Status.html
@@ -148,83 +148,93 @@
                                                 <div class="md-form mb-2">
                                                     <label id="user-lbl" data-error="wrong" data-success="right">Vaccine: </label>
                                                     <select required class="form-select" name="vax_name" aria-label="Default select example" onchange="changeNum(this)">
-                                                        {% if preschooler.age_months >= 12 %}
-                                                            {% if 'Measles Mumps - Rubella' in vax_list %}
+                                                        {% if preschooler.age_months <= 15 and preschooler.age_months > 9 %}
+                                                            {% if 'Measles Mumps - Rubella' in vax_list and dose_list.7 == 2 %}
                                                                 <option disabled value="Measles Mumps - Rubella">Measles Mumps - Rubella</option>
                                                             {% else %}
+                                                                <option selected value="---">---</option>
                                                                 <option value="Measles Mumps - Rubella">Measles Mumps - Rubella</option>
                                                             {% endif %}
 
-                                                        {% elif preschooler.age_months == 9 %}
+                                                        {% elif preschooler.age_months <= 9 and preschooler.age_weeks > 14 %}
                                                             {% if 'Measles Mumps - Rubella' in vax_list %}
                                                                 <option disabled value="Measles Mumps - Rubella">Measles Mumps - Rubella</option>
                                                             {% else %}
+                                                                <option selected value="---">---</option>
                                                                 <option value="Measles Mumps - Rubella">Measles Mumps - Rubella</option>
                                                             {% endif %}
                                                             
-                                                        {% elif preschooler.age_weeks == 14 %}
-                                                            {% if 'Oral Poliovirus Vaccine' in vax_list and 'Pentavalent Vaccine' in vax_list and 'Measles Containing Vaccines' in vax_list and 'Tetanus Toxoid' in vax_list %}
+                                                        {% elif preschooler.age_weeks <= 14 and preschooler.age_weeks > 10 %}
+                                                            {% if 'Oral Poliovirus Vaccine' in vax_list and dose_list.2 == 3 and 'Pentavalent Vaccine' in vax_list and dose_list.3 == 3 and 'Measles Containing Vaccines' in vax_list and dose_list.4 == 3 and 'Tetanus Toxoid' in vax_list %}
                                                                 <option disabled value="Oral Poliovirus Vaccine">Oral Poliovirus Vaccine</option>
                                                                 <option disabled value="Pentavalent Vaccine">Pentavalent Vaccine</option>
                                                                 <option disabled value="Measles Containing Vaccines">Measles Containing Vaccines</option>
                                                                 <option disabled value="Tetanus Toxoid">Tetanus Toxoid</option>
 
-                                                            {% elif 'Oral Poliovirus Vaccine' in vax_list and 'Pentavalent Vaccine' in vax_list and 'Measles Containing Vaccines' in vax_list %}
+                                                            {% elif 'Oral Poliovirus Vaccine' in vax_list and dose_list.2 == 3 and 'Pentavalent Vaccine' in vax_list and dose_list.3 == 3 and 'Measles Containing Vaccines' in vax_list and dose_list.4 == 3 %}
+                                                                <option selected value="---">---</option>
                                                                 <option disabled value="Oral Poliovirus Vaccine">Oral Poliovirus Vaccine</option>
                                                                 <option disabled value="Pentavalent Vaccine">Pentavalent Vaccine</option>
                                                                 <option disabled value="Measles Containing Vaccines">Measles Containing Vaccines</option>
                                                                 <option value="Tetanus Toxoid">Tetanus Toxoid</option>
 
-                                                            {% elif 'Oral Poliovirus Vaccine' in vax_list and 'Pentavalent Vaccine' in vax_list %}
+                                                            {% elif 'Oral Poliovirus Vaccine' in vax_list and dose_list.2 == 3 and 'Pentavalent Vaccine' in vax_list and dose_list.3 == 3 %}
+                                                                <option selected value="---">---</option>
                                                                 <option disabled value="Oral Poliovirus Vaccine">Oral Poliovirus Vaccine</option>
                                                                 <option disabled value="Pentavalent Vaccine">Pentavalent Vaccine</option>
                                                                 <option value="Measles Containing Vaccines">Measles Containing Vaccines</option>
                                                                 <option disabled value="Tetanus Toxoid">Tetanus Toxoid</option>
 
-                                                            {% elif 'Oral Poliovirus Vaccine' in vax_list %}
+                                                            {% elif 'Oral Poliovirus Vaccine' in vax_list and dose_list.2 == 3 %}
+                                                                <option selected value="---">---</option>
                                                                 <option disabled value="Oral Poliovirus Vaccine">Oral Poliovirus Vaccine</option>
                                                                 <option value="Pentavalent Vaccine">Pentavalent Vaccine</option>
                                                                 <option disabled value="Measles Containing Vaccines">Measles Containing Vaccines</option>
                                                                 <option disabled value="Tetanus Toxoid">Tetanus Toxoid</option>
                                                             {% else %}
+                                                                <option selected value="---">---</option>
                                                                 <option value="Oral Poliovirus Vaccine">Oral Poliovirus Vaccine</option>
                                                                 <option disabled value="Pentavalent Vaccine">Pentavalent Vaccine</option>
                                                                 <option disabled value="Measles Containing Vaccines">Measles Containing Vaccines</option>
                                                                 <option disabled value="Tetanus Toxoid">Tetanus Toxoid</option>
                                                             {% endif %}
-                                                        {% elif preschooler.age_weeks == 10 %}
-                                                            {% if 'Oral Poliovirus Vaccine' in vax_list and 'Pentavalent Vaccine' in vax_list and 'Measles Containing Vaccines' in vax_list and 'Inactivated Polio Vaccine' in vax_list %}
+                                                        {% elif preschooler.age_weeks <= 10 and preschooler.age_weeks > 6 %}
+                                                            {% if 'Oral Poliovirus Vaccine' in vax_list and dose_list.2 == 2 and 'Pentavalent Vaccine' in vax_list and dose_list.3 == 2 and 'Measles Containing Vaccines' in vax_list and dose_list.4 == 2 and 'Inactivated Polio Vaccine' in vax_list and dose_list.5 == 2 %}
                                                                 <option disabled value="Oral Poliovirus Vaccine">Oral Poliovirus Vaccine</option>
                                                                 <option disabled value="Pentavalent Vaccine">Pentavalent Vaccine</option>
                                                                 <option disabled value="Measles Containing Vaccines">Measles Containing Vaccines</option>
                                                                 <option disabled value="Inactivated Polio Vaccine">Inactivated Polio Vaccine</option>
 
-                                                            {% elif 'Oral Poliovirus Vaccine' in vax_list and 'Pentavalent Vaccine' in vax_list and 'Measles Containing Vaccines' in vax_list %}
+                                                            {% elif 'Oral Poliovirus Vaccine' in vax_list and dose_list.2 == 2 and 'Pentavalent Vaccine' in vax_list and dose_list.3 == 2 and 'Measles Containing Vaccines' in vax_list and dose_list.4 == 2 %}
+                                                                <option selected value="---">---</option>
                                                                 <option disabled value="Oral Poliovirus Vaccine">Oral Poliovirus Vaccine</option>
                                                                 <option disabled value="Pentavalent Vaccine">Pentavalent Vaccine</option>
                                                                 <option disabled value="Measles Containing Vaccines">Measles Containing Vaccines</option>
                                                                 <option value="Inactivated Polio Vaccine">Inactivated Polio Vaccine</option>
 
-                                                            {% elif 'Oral Poliovirus Vaccine' in vax_list and 'Pentavalent Vaccine' in vax_list %}
+                                                            {% elif 'Oral Poliovirus Vaccine' in vax_list and dose_list.2 == 2 and 'Pentavalent Vaccine' in vax_list and dose_list.3 == 2 %}
+                                                                <option selected value="---">---</option>
                                                                 <option disabled value="Oral Poliovirus Vaccine">Oral Poliovirus Vaccine</option>
                                                                 <option disabled value="Pentavalent Vaccine">Pentavalent Vaccine</option>
                                                                 <option value="Measles Containing Vaccines">Measles Containing Vaccines</option>
                                                                 <option disabled value="Inactivated Polio Vaccine">Inactivated Polio Vaccine</option>
 
-                                                            {% elif 'Oral Poliovirus Vaccine' in vax_list %}
+                                                            {% elif 'Oral Poliovirus Vaccine' in vax_list and dose_list.2 == 2 %}
+                                                                <option selected value="---">---</option>
                                                                 <option disabled value="Oral Poliovirus Vaccine">Oral Poliovirus Vaccine</option>
                                                                 <option value="Pentavalent Vaccine">Pentavalent Vaccine</option>
                                                                 <option disabled value="Measles Containing Vaccines">Measles Containing Vaccines</option>
                                                                 <option disabled value="Inactivated Polio Vaccine">Inactivated Polio Vaccine</option>
 
                                                             {% else %}
+                                                                <option selected value="---">---</option>
                                                                 <option value="Oral Poliovirus Vaccine">Oral Poliovirus Vaccine</option>
                                                                 <option disabled value="Pentavalent Vaccine">Pentavalent Vaccine</option>
                                                                 <option disabled value="Measles Containing Vaccines">Measles Containing Vaccines</option>
                                                                 <option disabled value="Inactivated Polio Vaccine">Inactivated Polio Vaccine</option>
                                                             {% endif %}
 
-                                                        {% elif preschooler.age_weeks == 6 %}
+                                                        {% elif preschooler.age_weeks <= 6 and preschooler.age_hours > 24 %}
                                                             {% if 'Oral Poliovirus Vaccine' in vax_list and 'Pentavalent Vaccine' in vax_list and 'Measles Containing Vaccines' in vax_list and 'Inactivated Polio Vaccine' in vax_list %}
                                                                 <option disabled value="Oral Poliovirus Vaccine">Oral Poliovirus Vaccine</option>
                                                                 <option disabled value="Pentavalent Vaccine">Pentavalent Vaccine</option>
@@ -356,12 +366,12 @@
                             </tr>
                         </thead>
                         <tbody>
-                            {% if preschooler.age_months >= 12 %}
+                            {% if preschooler.age_months <= 15 and preschooler.age_months > 9 %}
                                 <tr>
                                         <td class="text-center">24 hours</td>
                                         <td class="text-center">2</td>
                                         <td class="text-center">2</td>
-                                        <td class="text-center">Completed</td>
+                                        <td class="text-center">Complete</td>
                                 </tr>
                                 <tr>
                                         <td class="text-center">6 weeks</td>
@@ -397,12 +407,12 @@
                                             <td class="text-center">Incomplete</td>
                                         {% endif %}
                                 </tr>
-                            {% elif preschooler.age_months == 9 %}
+                            {% elif preschooler.age_months <= 9 and preschooler.age_weeks > 14 %}
                                 <tr>
                                         <td class="text-center">24 hours</td>
                                         <td class="text-center">2</td>
                                         <td class="text-center">2</td>
-                                        <td class="text-center">Completed</td>
+                                        <td class="text-center">Complete</td>
                                 </tr>
                                 <tr>
                                         <td class="text-center">6 weeks</td>
@@ -438,12 +448,12 @@
                                         <td class="text-center"></td>
                                         <td class="text-center"></td>
                                 </tr>
-                            {% elif preschooler.age_weeks == 14 %}
+                            {% elif preschooler.age_weeks <= 14 and preschooler.age_weeks > 10 %}
                                 <tr>
                                         <td class="text-center">24 hours</td>
                                         <td class="text-center">2</td>
                                         <td class="text-center">2</td>
-                                        <td class="text-center">Completed</td>
+                                        <td class="text-center">Complete</td>
                                 </tr>
                                 <tr>
                                         <td class="text-center">6 weeks</td>
@@ -479,12 +489,12 @@
                                         <td class="text-center"></td>
                                         <td class="text-center"></td>
                                 </tr>
-                            {% elif preschooler.age_weeks == 10 %}
+                            {% elif preschooler.age_weeks <= 10 and preschooler.age_weeks > 6 %}
                                 <tr>
                                         <td class="text-center">24 hours</td>
                                         <td class="text-center">2</td>
                                         <td class="text-center">2</td>
-                                        <td class="text-center">Completed</td>
+                                        <td class="text-center">Complete</td>
                                 </tr>
                                 <tr>
                                         <td class="text-center">6 weeks</td>
@@ -520,12 +530,12 @@
                                         <td class="text-center"></td>
                                         <td class="text-center"></td>
                                 </tr>
-                            {% elif preschooler.age_weeks == 6 %}
+                            {% elif preschooler.age_weeks <= 6 and preschooler.age_hours > 24 %}
                                 <tr>
                                         <td class="text-center">24 hours</td>
                                         <td class="text-center">2</td>
                                         <td class="text-center">2</td>
-                                        <td class="text-center">Completed</td>
+                                        <td class="text-center">Complete</td>
                                 </tr>
                                 <tr>
                                         <td class="text-center fw-bold">6 weeks</td>
