--- a/ppms_project/profilingApp/templates/activities/BHW Immunization Status.html
+++ b/ppms_project/profilingApp/templates/activities/BHW Immunization Status.html
@@ -148,143 +148,19 @@
                                                 <div class="md-form mb-2">
                                                     <label id="user-lbl" data-error="wrong" data-success="right">Vaccine: </label>
                                                     <select required class="form-select" name="vax_name" aria-label="Default select example" onchange="changeNum(this)">
-                                                        {% if preschooler.age_months <= 15 and preschooler.age_months > 9 %}
-                                                            {% if 'Measles Mumps - Rubella' in vax_list and dose_list.7 == 2 %}
-                                                                <option disabled value="Measles Mumps - Rubella">Measles Mumps - Rubella</option>
-                                                            {% else %}
-                                                                <option selected value="---">---</option>
-                                                                <option value="Measles Mumps - Rubella">Measles Mumps - Rubella</option>
-                                                            {% endif %}
-
-                                                        {% elif preschooler.age_months <= 9 and preschooler.age_weeks > 14 %}
-                                                            {% if 'Measles Mumps - Rubella' in vax_list %}
-                                                                <option disabled value="Measles Mumps - Rubella">Measles Mumps - Rubella</option>
-                                                            {% else %}
-                                                                <option selected value="---">---</option>
-                                                                <option value="Measles Mumps - Rubella">Measles Mumps - Rubella</option>
-                                                            {% endif %}
-                                                            
-                                                        {% elif preschooler.age_weeks <= 14 and preschooler.age_weeks > 10 %}
-                                                            {% if 'Oral Poliovirus Vaccine' in vax_list and dose_list.2 == 3 and 'Pentavalent Vaccine' in vax_list and dose_list.3 == 3 and 'Measles Containing Vaccines' in vax_list and dose_list.4 == 3 and 'Tetanus Toxoid' in vax_list %}
-                                                                <option disabled value="Oral Poliovirus Vaccine">Oral Poliovirus Vaccine</option>
-                                                                <option disabled value="Pentavalent Vaccine">Pentavalent Vaccine</option>
-                                                                <option disabled value="Measles Containing Vaccines">Measles Containing Vaccines</option>
-                                                                <option disabled value="Tetanus Toxoid">Tetanus Toxoid</option>
-
-                                                            {% elif 'Oral Poliovirus Vaccine' in vax_list and dose_list.2 == 3 and 'Pentavalent Vaccine' in vax_list and dose_list.3 == 3 and 'Measles Containing Vaccines' in vax_list and dose_list.4 == 3 %}
-                                                                <option selected value="---">---</option>
-                                                                <option disabled value="Oral Poliovirus Vaccine">Oral Poliovirus Vaccine</option>
-                                                                <option disabled value="Pentavalent Vaccine">Pentavalent Vaccine</option>
-                                                                <option disabled value="Measles Containing Vaccines">Measles Containing Vaccines</option>
-                                                                <option value="Tetanus Toxoid">Tetanus Toxoid</option>
-
-                                                            {% elif 'Oral Poliovirus Vaccine' in vax_list and dose_list.2 == 3 and 'Pentavalent Vaccine' in vax_list and dose_list.3 == 3 %}
-                                                                <option selected value="---">---</option>
-                                                                <option disabled value="Oral Poliovirus Vaccine">Oral Poliovirus Vaccine</option>
-                                                                <option disabled value="Pentavalent Vaccine">Pentavalent Vaccine</option>
-                                                                <option value="Measles Containing Vaccines">Measles Containing Vaccines</option>
-                                                                <option disabled value="Tetanus Toxoid">Tetanus Toxoid</option>
-
-                                                            {% elif 'Oral Poliovirus Vaccine' in vax_list and dose_list.2 == 3 %}
-                                                                <option selected value="---">---</option>
-                                                                <option disabled value="Oral Poliovirus Vaccine">Oral Poliovirus Vaccine</option>
-                                                                <option value="Pentavalent Vaccine">Pentavalent Vaccine</option>
-                                                                <option disabled value="Measles Containing Vaccines">Measles Containing Vaccines</option>
-                                                                <option disabled value="Tetanus Toxoid">Tetanus Toxoid</option>
-                                                            {% else %}
-                                                                <option selected value="---">---</option>
-                                                                <option value="Oral Poliovirus Vaccine">Oral Poliovirus Vaccine</option>
-                                                                <option disabled value="Pentavalent Vaccine">Pentavalent Vaccine</option>
-                                                                <option disabled value="Measles Containing Vaccines">Measles Containing Vaccines</option>
-                                                                <option disabled value="Tetanus Toxoid">Tetanus Toxoid</option>
-                                                            {% endif %}
-                                                        {% elif preschooler.age_weeks <= 10 and preschooler.age_weeks > 6 %}
-                                                            {% if 'Oral Poliovirus Vaccine' in vax_list and dose_list.2 == 2 and 'Pentavalent Vaccine' in vax_list and dose_list.3 == 2 and 'Measles Containing Vaccines' in vax_list and dose_list.4 == 2 and 'Inactivated Polio Vaccine' in vax_list and dose_list.5 == 2 %}
-                                                                <option disabled value="Oral Poliovirus Vaccine">Oral Poliovirus Vaccine</option>
-                                                                <option disabled value="Pentavalent Vaccine">Pentavalent Vaccine</option>
-                                                                <option disabled value="Measles Containing Vaccines">Measles Containing Vaccines</option>
-                                                                <option disabled value="Inactivated Polio Vaccine">Inactivated Polio Vaccine</option>
-
-                                                            {% elif 'Oral Poliovirus Vaccine' in vax_list and dose_list.2 == 2 and 'Pentavalent Vaccine' in vax_list and dose_list.3 == 2 and 'Measles Containing Vaccines' in vax_list and dose_list.4 == 2 %}
-                                                                <option selected value="---">---</option>
-                                                                <option disabled value="Oral Poliovirus Vaccine">Oral Poliovirus Vaccine</option>
-                                                                <option disabled value="Pentavalent Vaccine">Pentavalent Vaccine</option>
-                                                                <option disabled value="Measles Containing Vaccines">Measles Containing Vaccines</option>
-                                                                <option value="Inactivated Polio Vaccine">Inactivated Polio Vaccine</option>
-
-                                                            {% elif 'Oral Poliovirus Vaccine' in vax_list and dose_list.2 == 2 and 'Pentavalent Vaccine' in vax_list and dose_list.3 == 2 %}
-                                                                <option selected value="---">---</option>
-                                                                <option disabled value="Oral Poliovirus Vaccine">Oral Poliovirus Vaccine</option>
-                                                                <option disabled value="Pentavalent Vaccine">Pentavalent Vaccine</option>
-                                                                <option value="Measles Containing Vaccines">Measles Containing Vaccines</option>
-                                                                <option disabled value="Inactivated Polio Vaccine">Inactivated Polio Vaccine</option>
-
-                                                            {% elif 'Oral Poliovirus Vaccine' in vax_list and dose_list.2 == 2 %}
-                                                                <option selected value="---">---</option>
-                                                                <option disabled value="Oral Poliovirus Vaccine">Oral Poliovirus Vaccine</option>
-                                                                <option value="Pentavalent Vaccine">Pentavalent Vaccine</option>
-                                                                <option disabled value="Measles Containing Vaccines">Measles Containing Vaccines</option>
-                                                                <option disabled value="Inactivated Polio Vaccine">Inactivated Polio Vaccine</option>
-
-                                                            {% else %}
-                                                                <option selected value="---">---</option>
-                                                                <option value="Oral Poliovirus Vaccine">Oral Poliovirus Vaccine</option>
-                                                                <option disabled value="Pentavalent Vaccine">Pentavalent Vaccine</option>
-                                                                <option disabled value="Measles Containing Vaccines">Measles Containing Vaccines</option>
-                                                                <option disabled value="Inactivated Polio Vaccine">Inactivated Polio Vaccine</option>
-                                                            {% endif %}
-
-                                                        {% elif preschooler.age_weeks <= 6 and preschooler.age_hours > 24 %}
-                                                            {% if 'Oral Poliovirus Vaccine' in vax_list and 'Pentavalent Vaccine' in vax_list and 'Measles Containing Vaccines' in vax_list and 'Inactivated Polio Vaccine' in vax_list %}
-                                                                <option disabled value="Oral Poliovirus Vaccine">Oral Poliovirus Vaccine</option>
-                                                                <option disabled value="Pentavalent Vaccine">Pentavalent Vaccine</option>
-                                                                <option disabled value="Measles Containing Vaccines">Measles Containing Vaccines</option>
-                                                                <option disabled value="Inactivated Polio Vaccine">Inactivated Polio Vaccine</option>
-
-                                                            {% elif 'Oral Poliovirus Vaccine' in vax_list and 'Pentavalent Vaccine' in vax_list and 'Measles Containing Vaccines' in vax_list %}
-                                                                <option disabled value="Oral Poliovirus Vaccine">Oral Poliovirus Vaccine</option>
-                                                                <option disabled value="Pentavalent Vaccine">Pentavalent Vaccine</option>
-                                                                <option disabled value="Measles Containing Vaccines">Measles Containing Vaccines</option>
-                                                                <option value="Inactivated Polio Vaccine">Inactivated Polio Vaccine</option>
-
-                                                            {% elif 'Oral Poliovirus Vaccine' in vax_list and 'Pentavalent Vaccine' in vax_list %}
-                                                                <option disabled value="Oral Poliovirus Vaccine">Oral Poliovirus Vaccine</option>
-                                                                <option disabled value="Pentavalent Vaccine">Pentavalent Vaccine</option>
-                                                                <option value="Measles Containing Vaccines">Measles Containing Vaccines</option>
-                                                                <option disabled value="Inactivated Polio Vaccine">Inactivated Polio Vaccine</option>
-
-                                                            {% elif 'Oral Poliovirus Vaccine' in vax_list %}
-                                                                <option disabled value="Oral Poliovirus Vaccine">Oral Poliovirus Vaccine</option>
-                                                                <option value="Pentavalent Vaccine">Pentavalent Vaccine</option>
-                                                                <option disabled value="Measles Containing Vaccines">Measles Containing Vaccines</option>
-                                                                <option disabled value="Inactivated Polio Vaccine">Inactivated Polio Vaccine</option>
-
-                                                            {% else %}
-                                                                <option value="Oral Poliovirus Vaccine">Oral Poliovirus Vaccine</option>
-                                                                <option disabled value="Pentavalent Vaccine">Pentavalent Vaccine</option>
-                                                                <option disabled value="Measles Containing Vaccines">Measles Containing Vaccines</option>
-                                                                <option disabled value="Inactivated Polio Vaccine">Inactivated Polio Vaccine</option>
-                                                            {% endif %}
-                                                                
-                                                        {% elif preschooler.age_hours <= 24 %}
-                                                            {% if 'BCG' in vax_list and 'Hepatitis B' in vax_list %}
-                                                                <option disabled value="BCG">BCG</option>
-                                                                <option disabled value="Hepatitis B">Hepatitis B</option>
-
-                                                            {% elif 'BCG' in vax_list %}
-                                                                <option disabled value="BCG">BCG</option>
-                                                                <option value="Hepatitis B">Hepatitis B</option>
-
-                                                            {% else %}
-                                                                <option value="BCG">BCG</option>
-                                                                <option disabled value="Hepatitis B">Hepatitis B</option>
-                                                            {% endif %}
-                                                        {% endif %}
+                                                        <option value="BCG">BCG</option>
+                                                        <option value="Hepatitis B">Hepatitis B</option>
+                                                        <option value="Oral Poliovirus Vaccine">Oral Poliovirus Vaccine</option>
+                                                        <option value="Pentavalent Vaccine">Pentavalent Vaccine</option>
+                                                        <option value="Measles Containing Vaccines">Measles Containing Vaccines</option>
+                                                        <option value="Tetanus Toxoid">Tetanus Toxoid</option>
+                                                        <option value="Inactivated Polio Vaccine">Inactivated Polio Vaccine</option>
+                                                        <option value="Measles Mumps - Rubella">Measles Mumps - Rubella</option>
                                                     </select>
                                                 </div>
                                                 <div class="md-form">
-                                                    <label id="user-lbl" data-error="wrong" data-success="right">Dose(s):</label>
-                                                    <input required class="form-control" type="number" min="1" max="1" name="dose" id="dose">
+                                                    <label id="user-lbl" data-error="wrong" data-success="right">Dose:</label>
+                                                    <label id="dose" for="">1</label>
                                                 </div>
                                                 <div class="md-form mb-2">
                                                     <label id="user-lbl" data-error="wrong" data-success="right">Required Doses:</label>
